EFA Version 3.0.2.2 Changes
############################################################

Issue #357 Bug               - Fonts Not Rendering in MailWatch
Issue #358 Bug               - Certain emails from detail.php do not populate B/W Lists
Issue #362 Bug               - mod_security disable id 981247
Issue #363 Bug               - Check for failed yum kernel update

MailWatch update to resolve timeout issues and directory traversal

############################################################
EFA Version 3.0.2.1 Changes
############################################################

Issue #356 Bug               - Search and Reports Not Functioning

Update MailWatch again to resolve issue
Exception to mod_security (hex passwords)
Reset ownership on geoip dat files

############################################################
EFA Version 3.0.2.0 Changes
############################################################

Update MailWatch to resolve various issues
Add extra exceptions to mod_security
Update to CentOS 6.9

############################################################
EFA Version 3.0.1.9 Changes
############################################################

Added Apache mod_security by default
Added Apache X-XSS-Protection header
Updated MailWatch and Sqlgrey Web Interface (Security Fixes)
Changed and updated database engine to MariaDB (10.1)

############################################################
EFA Version 3.0.1.8 Changes
############################################################

Issue #347 Bug              - Missing defines in latest MailWatch

############################################################
EFA Version 3.0.1.7 Changes
############################################################

Issue #346  Bug             - EFA 3.0.1.6 mailwatch is empty after Update GeoIP Database

Updated MailWatch to 1.2.0 - RC4 latest development

############################################################
EFA Version 3.0.1.6 Changes