@@ -6,6 +6,7 @@ Issue #357 Bug               - Fonts Not Rendering in MailWatch
 Issue #358 Bug               - Certain emails from detail.php do not populate B/W Lists
 Issue #362 Bug               - mod_security disable id 981247
 Issue #363 Bug               - Check for failed yum kernel update
+Issue #366 Bug               - Clear SpamAssassin-Temp
 
 MailWatch update to resolve timeout issues and directory traversal
 
